Quiz is fully functional with high scores but missing countdown aspect. Will add at a later time.

--- a/css/game.css
+++ b/css/game.css
@@ -16,7 +16,7 @@ background-color: white;
 
 .selection-prefix {
     padding: 1.6rem 2.6rem;
-    background-color: deepskyblue;
+    background-color: navy;
     color: white;
 }
 
